--- a/src/main/resources/templates/formPedidos.html
+++ b/src/main/resources/templates/formPedidos.html
@@ -168,8 +168,8 @@
 
                 <label for="" class="col-sm-2 col-form-label">SUB TOTAL</label>
                 <div class="col-ms-6">
-                    <input type="text" th:field="*{SubTotal}" class="form-control" th:errorclass="'form-control alert-danger'">
-                    <label class="form-text text-danger" th:if ="${#fields.hasErrors('SubTotal')}" th:errors="*{SubTotal}"></label>
+                    <input type="text" th:field="*{SubTotal}" class="form-control" th:errorclass="'form-control alert-danger'" readonly>
+                    <label class="form-text text-danger" th:if ="${#fields.hasErrors('SubTotal')}" th:errors="*{SubTotal}" ></label>
                 </div>
 
 
@@ -178,25 +178,93 @@
 
                 <label for="" class="col-sm-2 col-form-label">DESCUENTO</label>
                 <div class="col-ms-6">
-                    <input type="text" th:field="*{Descuento}" class="form-control" th:errorclass="'form-control alert-danger'">
+                    <input type="text" th:field="*{Descuento}" class="form-control" th:errorclass="'form-control alert-danger'" readonly>
                     <label class="form-text text-danger" th:if ="${#fields.hasErrors('Descuento')}" th:errors="*{Descuento}"></label>
                 </div>
 
 
             </div>
-            <div class="form-group">
+            <div class="form-group" style="padding-bottom: 1em;">
 
                 <label for="" class="col-sm-2 col-form-label">TOTAL</label>
                 <div class="col-ms-6">
-                    <input type="text" th:field="*{Total}" class="form-control" th:errorclass="'form-control alert-danger'">
+                    <input type="text" th:field="*{Total}" class="form-control" th:errorclass="'form-control alert-danger'" readonly>
                     <label class="form-text text-danger" th:if ="${#fields.hasErrors('Total')}" th:errors="*{Total}"></label>
                 </div>
 
 
+            </div >
+
+            
+            <h1 style="text-align: center; background-color: rgb(132, 197, 197); border-radius: 10px; color: black;">DETALLES PEDIDO</h1>
+
+            <div style="border: solid 1px black; width:60%; height:300%; padding-top: 2em; background-color: rgb(161, 202, 202); margin: auto; color: black;">
+                <div>
+                    <label for="" class="col-sm-2 col-form-label">ID </label>
+                    <div class="col-ms-6">
+                        <input type="text" th:field="*{Total}" class="form-control" th:errorclass="'form-control alert-danger'">
+                        <label class="form-text text-danger" th:if ="${#fields.hasErrors('Total')}" th:errors="*{Total}"></label>
+                    </div>
+    
+    
+                </div>
+                <div class="form-group" style="padding-bottom: 1em;">
+
+                    <label for="" class="col-sm-2 col-form-label">ID PEDIDO</label>
+                    <div class="col-ms-6">
+                        <input type="text" th:field="*{Total}" class="form-control" th:errorclass="'form-control alert-danger'" readonly>
+                        <label class="form-text text-danger" th:if ="${#fields.hasErrors('Total')}" th:errors="*{Total}"></label>
+                    </div>
+    
+    
+                </div >
+                <div class="form-group" style="padding-bottom: 1em;">
+
+                    <label for="" class="col-sm-2 col-form-label">ID PRODUCTO</label>
+                    <div class="col-ms-6">
+                        <input type="text" th:field="*{Total}" class="form-control" th:errorclass="'form-control alert-danger'" readonly>
+                        <label class="form-text text-danger" th:if ="${#fields.hasErrors('Total')}" th:errors="*{Total}"></label>
+                    </div>
+    
+    
+                </div >
+                <div class="form-group" style="padding-bottom: 1em;">
+
+                    <label for="" class="col-sm-2 col-form-label">DESCUENTO</label>
+                    <div class="col-ms-6">
+                        <input type="text" th:field="*{Total}" class="form-control" th:errorclass="'form-control alert-danger'" readonly>
+                        <label class="form-text text-danger" th:if ="${#fields.hasErrors('Total')}" th:errors="*{Total}"></label>
+                    </div>
+    
+    
+                </div >
+                <div class="form-group" style="padding-bottom: 1em;">
+
+                    <label for="" class="col-sm-2 col-form-label">CANTIDAD</label>
+                    <div class="col-ms-6">
+                        <input type="text" th:field="*{Total}" class="form-control" th:errorclass="'form-control alert-danger'" readonly>
+                        <label class="form-text text-danger" th:if ="${#fields.hasErrors('Total')}" th:errors="*{Total}"></label>
+                    </div>
+    
+    
+                </div >
+                
+                <div class="form-group" style="padding-bottom: 1em;">
+
+                    <label for="" class="col-sm-2 col-form-label">TOTAL</label>
+                    <div class="col-ms-6">
+                        <input type="text" th:field="*{Total}" class="form-control" th:errorclass="'form-control alert-danger'" readonly>
+                        <label class="form-text text-danger" th:if ="${#fields.hasErrors('Total')}" th:errors="*{Total}"></label>
+                    </div>
+    
+    
+                </div >
+
             </div>
+            
             <div class="form-group" style="padding-top: 2em ">
                 <div class="col-ms-6">
-                    <input type="submit" value="Guardar" class="btn btn-primary">
+                    <input type="submit" value="Guardar Pedido" class="btn btn-primary">
                 </div>
 
 
